welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
var couleur = 0
def isFacingTrail():Boolean = {
    // Write your code here
    if(estFaceMur){
    	return false
    }
    avance()
    couleur = getCouleurSol()
    recule()
    if(couleur == Color.green){
    	return true
    }
    else{
    	return false
    }
}        
